XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 5.0.0
    • 5.0.0
    • view-engine
    • 4.7.0-849 / CentOS 7
    • Untriaged
    • Yes

    Description

      The views that sync_gateway query seem to be broken with with 4.7.0-849. The last build that these tests were passing on was 4.7.0-833. I am seeing errors similar to:

      2016-07-05T12:55:12.278-07:00 Starting server on :4984 ...
      2016-07-05T12:55:13.777-07:00 Changes+: Notifying that "data-bucket" changed (keys="{_sync:user:}") count=2
      2016-07-05T12:55:22.622-07:00 HTTP:  #001: POST /db/_resync  (ADMIN)
      2016-07-05T12:55:22.622-07:00 Recomputing document channels...
      _time=2016-07-05T12:55:23.495-07:00 _level=INFO _msg=go-couchbase: call to ViewCustom("sync_housekeeping", "import") in github.com/couchbase/sync_gateway/base.CouchbaseBucket.View.func1 took 873.207058ms 
      2016-07-05T12:55:23.495-07:00 HTTP: #001:     --> 500 Internal error: error executing view req at http://s61401cnt72.sc.couchbase.com:8092/data-bucket/_design/sync_housekeeping/_view/import?reduce=false&stale=false&startkey=%5Btrue%5D: 500 Internal Server Error - {"error":"error","reason":"{index_builder_exit,132,<<>>}"}
        (873.5 ms)
      

      and

      2016-07-05T11:52:10.302-07:00 HTTP:  #811: GET /db/_all_docs  (as seth)
      _time=2016-07-05T11:52:10.983-07:00 _level=INFO _msg=go-couchbase: call to ViewCustom("sync_housekeeping", "all_docs") in github.com/couchbase/sync_gateway/db.(*Database).ForEachDocID took 680.086605ms 
      2016-07-05T11:52:10.983-07:00 WARNING: all_docs got error: error executing view req at http://s61401cnt72.sc.couchbase.com:8092/data-bucket/_design/sync_housekeeping/_view/all_docs?reduce=false&stale=false: 500 Internal Server Error - {"error":"error","reason":"{index_builder_exit,132,<<>>}"}
       -- db.(*Database).ForEachDocID() at database.go:597
      2016-07-05T11:52:10.983-07:00 WARNING: EncodedResponseWriter: Too late to disableCompression! -- rest.(*EncodedResponseWriter).disableCompression() at encoded_response_writer.go:60
      2016-07-05 11:52:10.983495 I | http: multiple response.WriteHeader calls
      2016-07-05T11:52:10.983-07:00 HTTP: #811:     --> 500 Internal error: error executing view req at http://s61401cnt72.sc.couchbase.com:8092/data-bucket/_design/sync_housekeeping/_view/all_docs?reduce=false&stale=false: 500 Internal Server Error - {"error":"error","reason":"{index_builder_exit,132,<<>>}"}
        (681.3 ms)
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Seth.Rosetter Seth Rosetter (Inactive)
              Seth.Rosetter Seth Rosetter (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty