MB-20084, MB-20085 Initialize V8 startup data blob if reducers defined.

Change-Id: I9a73a4346b8e6ab2dbc5c3d8794c320e5634e073
Reviewed-on: http://review.couchbase.org/65546
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Harsha H S <hhs.couchbase@gmail.com>