tests/mapreduce/map.c
@@ -497,6 +497,7 @@ int main(void)
 {
     fprintf(stderr, "Running map tests\n");
     mapreduce_init();
+    initStartupData();
 
     mapreduce_set_timeout(1);
     test_timeout();
@@ -510,6 +511,7 @@ int main(void)
 
     test_timeout();
 
+    deinitStartupData();
     mapreduce_deinit();
     return 0;
 }
