tests/mapreduce/reduce.c
@@ -408,6 +408,7 @@ int main(void)
 {
     fprintf(stderr, "Running reduce tests\n");
     mapreduce_init();
+    initStartupData();
 
     mapreduce_set_timeout(1);
     test_timeout();
@@ -419,6 +420,7 @@ int main(void)
     test_reduce_and_rereduce_success();
 
     test_timeout();
+    deinitStartupData();
     mapreduce_deinit();
     return 0;
 }
